Added: file upload sample
