# example-node/api/controllers/user.js
@@ -1,3 +1,4 @@
+const csvParse = require('csv-parse');
 const dmclib = require('node-dmclib');
 const pager = dmclib.pager;
 const storeHelper = dmclib.stores.helper;
@@ -117,6 +118,32 @@ const update = (req, res) => {
   ;
 };
 
+/**
+ * Controller : upload Users
+ * HTTP Method : PUT
+ * PATH : /user/upload/csv
+ *
+ * @returns {Promise.<TResult>}
+ */
+const upload = (req, res) => {
+  const file = req.files.payload[0];
+  if (file.mimetype !== 'text/csv') {
+    console.warn(`invalid file format: ${file.originalname}`);
+    return res.json({});
+  }
+
+  csvParse(file.buffer.toString(), {columns: true}, (err, data) => {
+    if (err) {
+      console.error(err);
+      return res.json({});
+    }
+
+    // あとはDBに入れるだけ
+    console.log(data);
+    res.json({});
+  });
+};
+
 
 module.exports = {
   'user#list': list,
@@ -124,4 +151,5 @@ module.exports = {
   'user#remove': remove,
   'user#show': show,
   'user#update': update,
+  'user#upload': upload,
 };
